organizational structure changes

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
 </head>
 <body>
-    <header class="header">
+    <header class="header container">
         <nav class="header-nav">
             <a class="header-nav-logo link" href="./index.html"><span class="header-nav-logo1">Web</span><span class="header-nav-logo2">Studio</span></a>
             <ul class="header-link list">
@@ -27,7 +27,7 @@
         </ul>
     </header> 
     <main>
-        <section class="portfolio">
+        <section class="portfolio container">
             <ul class="portfolio-buttons-list list">
                 <li class="portfolio-buttons-item"><button class="portfolio-button" type="button">Усі</button></li>
                 <li class="portfolio-buttons-item"><button class="portfolio-button" type="button">Веб-сайти</button></li>
@@ -84,7 +84,7 @@
             </ul>
         </section>
     </main>
-    <footer class="footer">
+    <footer class="footer container">
         <a class="footer-logo link" href="./index.html">
             <span class="footer-logo1">Web</span><span class="footer-logo2">Studio</span>
         </a>
