--- a/portfolio.html
+++ b/portfolio.html
@@ -46,48 +46,66 @@
                 <ul class="portfolio-card-list list">
                     <li class="portfolio-item">
                         <img src="./images/portfolio-main/3-faces.webp" alt="три-портрети" width="370" height="294">
+                        <div class="portfolio-wrapper">
                         <h2 class="porftolio-card-title">Технокряк</h2>
                         <p class="portfolio-card-text">Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img src="./images/portfolio-main/basketball.webp" alt="баскетбол" width="370" height="294">
+                        <div class="portfolio-wrapper">
                         <h2 class="porftolio-card-title">Постер New Orlean vs Golden Star</h2>
                         <p class="portfolio-card-text"">Дизайн</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img src="./images/portfolio-main/seafood.webp" alt="морська-їжа" width="370" height="294">
+                        <div class="portfolio-wrapper">
                         <h2 class="porftolio-card-title">Ресторан Seafood</h2>
                         <p class="portfolio-card-text"">Додаток</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img src="./images/portfolio-main/headfones.webp" alt="навушники" width="370" height="294">
+                        <div class="portfolio-wrapper">
                         <h2 class="porftolio-card-title">Проєкт Prime</h2>
                         <p class="portfolio-card-text"">Маркетинг</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img src="./images/portfolio-main/blocks.webp" alt="коробки" width="370" height="294">
+                        <div class="portfolio-wrapper">
                         <h2 class="porftolio-card-title">Проєкт Boxes</h2>
                         <p class="portfolio-card-text"">Додаток</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img src="./images/portfolio-main/screen.webp" alt="екран" width="370" height="294">
+                        <div class="portfolio-wrapper">
                         <h2 class="porftolio-card-title">Inspiration has no Borders</h2>
                         <p class="portfolio-card-text"">Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img src="./images/portfolio-main/journal.webp" alt="журнал" width="370" height="294">
+                        <div class="portfolio-wrapper">
                         <h2 class="porftolio-card-title">Видання Limited Edition</h2>
                         <p class="portfolio-card-text"">Дизайн</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img src="./images/portfolio-main/etiquette.webp" alt="етикетка" width="370" height="294">
+                        <div class="portfolio-wrapper">
                         <h2 class="porftolio-card-title">Проєкт LAB</h2>
                         <p class="portfolio-card-text"">Маркетинг</p>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <img src="./images/portfolio-main/notebook.webp" alt="ноутбук" width="370" height="294">
+                        <div class="portfolio-wrapper">
                         <h2 class="porftolio-card-title">Growing Business</h2>
                         <p class="portfolio-card-text"">Додаток</p>
+                        </div>
                     </li>
                 </ul>
             </div>
